Reformatted code.